# kindex

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Makefile  PRIVACY.md  README.md  REVIEW.md  constraints.yaml  kin.sample.yaml  pact.yaml  pyproject.toml  server.json  settings.json  sops.md  task.md
.claude-plugin/: plugin.json
.github/workflows/: pages.yml  workflow.yml
.kin/: .gitignore  code-map.json  config  index.json  inter-agent-coordination-notes.md  release-mcp-registry-notes.md
.pact/: audit.jsonl  state.json
.pact/decomposition/: interview.json
.pact/test-gen/: analysis.json  security_audit.md
decomposition/: tree.json
docs/: CNAME  human-guide.md  index.html  llms-full.txt  llms.txt  mcp-agent-guide.md  privacy.html
examples/adapter-template/: kindex_adapter_csv.py  pyproject.toml
examples/kin-voices/: README.md  anthropic.kin  startup.kin
hooks/: hooks.json
scripts/: sync-version.sh
skills/kindex-capture/: SKILL.md
skills/kindex-learn/: SKILL.md
skills/kindex-prime/: SKILL.md
src/kindex/: __init__.py  actions.py  agent_adapters.py  agent_settings.py  analytics.py  archive.py  attention.py  budget.py  cli.py  code_map.py  config.py  coordination.py  daemon.py  dream.py  dream_deep.py  extract.py  graph.py  hooks.py  ingest.py  kin_merge.py  llm.py  locks.py  mcp_server.py  mode_primer.py  models.py  modes.py  notify.py  reinforce.py  reminders.py  retrieve.py  routing.py  scheduling.py  schema.py  scoping.py  sessions.py  setup.py  sim.py  store.py  tasks.py  vault.py  (+1 more)
tests/: conftest.py  test_activity_log.py  test_adapters.py  test_agent_settings.py  test_alias.py  test_archive.py  test_atomic_rmw.py  test_attention.py  test_audience.py  test_budget.py  test_cache.py  test_cli.py  test_code_adapter_fallback.py  test_code_adapter_rust.py  test_code_map.py  test_context_tiers.py  test_coordination.py  test_daemon.py  test_doctor.py  test_dream.py  test_edit_store.py  test_edit_surfaces.py  test_embed_queue.py  test_expiry.py  test_extract.py  test_extract_improved.py  test_graph.py  test_graph_store.py  test_hooks.py  test_import_export.py  test_ingest.py  test_kin_inheritance.py  test_kin_merge.py  test_locks.py  test_mcp.py  test_models.py  test_new_features.py  test_notify.py  test_operational.py  test_pheromone.py  (+17 more)
tests/smoke/: test_kindex_actions.py  test_kindex_adapters_base.py  test_kindex_adapters_claude_web.py  test_kindex_adapters_files.py  test_kindex_adapters_git_hooks.py  (+29 more)
(+20 files in other folders)
